--- a/src/app/Components/product-details/product-details.component.html
+++ b/src/app/Components/product-details/product-details.component.html
@@ -20,7 +20,7 @@
             <div class="container">
                 <div class="row">
                   <div class="col-md-6">
-                    <h2 class="product-title">{{ product.name }}</h2>
+                    <h2 class="product-title">{{ product.name |uppercase}}</h2>
                   </div>
                   <div class="col-md-6">
                     <div class="row">
@@ -28,7 +28,7 @@
                         <h4 class="property-title">Price:</h4>
                       </div>
                       <div class="col-md-6">
-                        <span class="property-value">{{ product.price }} $</span>
+                        <span class="property-value">{{ product.price|currency }} </span>
                       </div>
                     </div>
                     <div class="row">
@@ -36,7 +36,7 @@
                         <h4 class="property-title">Expiry Date:</h4>
                       </div>
                       <div class="col-md-6">
-                        <span class="property-value">{{ product.expiryDate }}</span>
+                        <span class="property-value">{{ product.expiryDate|date }}</span>
                       </div>
                     </div>
                   </div>
