--- a/src/app/Components/product-details/product-details.component.html
+++ b/src/app/Components/product-details/product-details.component.html
@@ -82,14 +82,14 @@
             <div class="form-group row">
               <label for="name" class="col-sm-3 col-form-label">Name</label>
               <div class="col-sm-9">
-                <input type="text" class="form-control" id="name" name="name" placeholder="Name" required #name>
+                <input type="text" class="form-control"[value]="product.name" id="name" name="name" placeholder="Name" required #name>
               </div>
             </div>
           
             <div class="form-group row">
               <label for="price" class="col-sm-3 col-form-label">Price</label>
               <div class="col-sm-9">
-                <input type="number" class="form-control" id="price" name="price" placeholder="Price" required #price>
+                <input type="number" class="form-control"[value]="product.price" id="price" name="price" placeholder="Price" required #price>
               </div>
             </div>
           </form>
